--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,13 @@
         scrollbar-width: none;  /* Firefox */
   }
 }
+
+@layer components {
+    .btn {
+      @apply rounded-[12px] bg-emerald-500 px-4 py-2 text-white hover:bg-emerald-600 disabled:bg-emerald-300;
+    }
+  
+    .side-menu-item {
+      @apply m-2 flex items-center gap-4 rounded-[10px] p-2 hover:bg-gray-800;
+    }
+}
